insert()/erase() added, unit tests added (gtest), renamed class to EString

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 ﻿cmake_minimum_required(VERSION 3.8)
 
-project("string")
+# Root CMake file for EString tests
+
+project("EStringTests")
+enable_testing()
 
 add_subdirectory("tests")
