Comprassion operators and append()/insert() for single character

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable(
 
   "StringModifyingTests.cpp"
   "EncodingsTests.cpp"
+  "OperatorsTests.cpp"
   
   "${PROJECT_SOURCE_DIR}/EString.cpp"
 )
