concatenating, more tests, buffer growth

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,6 +6,7 @@ FetchContent_Declare(
   googletest
   URL https://github.com/google/googletest/archive/f345b2ca6adb1b505049190867eedf24d3b5eaa3.zip
   DOWNLOAD_EXTRACT_TIMESTAMP TRUE
+  
 )
 
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
@@ -21,6 +22,7 @@ add_executable(
   "EncodingsTests.cpp"
   "OperatorsTests.cpp"
   "ChecksTests.cpp"
+  "InitializingTests.cpp"
   
   "${PROJECT_SOURCE_DIR}/EString.cpp"
 )
